# useful_types

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
static_tests/: test_buffer.py  test_dataclasslike.py  test_not_none.py  test_sequencenotstr.py
tests/: test_dataclasslike.py
useful_types/: __init__.py  experimental.py
