[project]
name = "useful_types"
version = "0.1.0"
authors = [{name = "The Python typing community"}]
description = "A collection of useful types."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = ["typing_extensions>=4.6"]

[project.urls]
homepage = "https://github.com/hauntsaninja/useful_types"
repository = "https://github.com/hauntsaninja/useful_types"
changelog = "https://github.com/hauntsaninja/useful_types/blob/master/CHANGELOG.md"

[build-system]
requires = ["flit_core>=3.8"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 100
skip-magic-trailing-comma = true
pyi = true
