[project]
name = "useful_types"
version = "0.1.0"
authors = [{name = "The Python typing community"}]
description = "A collection of useful types."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = ["typing_extensions >= 4.7"]

[project.urls]
homepage = "https://github.com/hauntsaninja/useful_types"
repository = "https://github.com/hauntsaninja/useful_types"
changelog = "https://github.com/hauntsaninja/useful_types/blob/main/CHANGELOG.md"

[build-system]
requires = ["flit_core>=3.8"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"

combine_as_imports = true
line_length = 100
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "F", "W", "B"]
ignore = ["E501"]
unfixable = ["F841", "F601", "F602", "B018"]
target-version = "py39"

[tool.mypy]
python_version = "3.8"
warn_unused_ignores = true

[tool.pyright]
pythonVersion = "3.8"
reportUnnecessaryTypeIgnoreComment = true
